--- a/library-app/src/app/features/dashboard/pages/dashboard-page/dashboard-page.component.html
+++ b/library-app/src/app/features/dashboard/pages/dashboard-page/dashboard-page.component.html
@@ -1,4 +1,11 @@
 <div class="dashboard">
-    <h1>Maddie's Library</h1>
-    <app-books-display />
+    <button (click)="displayFriendsBooks()">Friend Library</button>
+    <button (click)="displayUserLibrary()">My Library</button>
+    <button (click)="displayBorrowedBooks()">Borrowed Books</button>
+
+    
+    
+
+
 </div>
+
