--- a/library-app/src/app/features/dashboard/pages/friend-library/friend-library.component.html
+++ b/library-app/src/app/features/dashboard/pages/friend-library/friend-library.component.html
@@ -1,5 +1,5 @@
 <div class="book-container">
-    @for (b of books(); track b.title) {
+    @for (b of friendBooks; track b.title) {
         <div class="book-card">
             <div>{{ b.title }} <br> by {{ b.author }}</div>
             <div><img [src]="getImagePath(b)" class="image"/></div>
