--- a/library-app/src/app/features/dashboard/pages/user-library/user-library.component.html
+++ b/library-app/src/app/features/dashboard/pages/user-library/user-library.component.html
@@ -1,6 +1,6 @@
 <ng-content>
 <div class="book-container">
-    @for (b of books; track b.title) {
+    @for (b of ownedBooks; track b.title) {
         <div class="book-card">
             <div>{{ b.title }} <br> by {{ b.author }}</div>
             <div><img [src]="getImagePath(b)" class="image"/></div>
