--- a/library-app/src/app/features/dashboard/pages/dashboard-page/dashboard-page.component.html
+++ b/library-app/src/app/features/dashboard/pages/dashboard-page/dashboard-page.component.html
@@ -1,11 +1,1 @@
-<div class="dashboard">
-    <button [routerLink]="['/friend']" routerLinkActive="router-link-active" >Friend Library</button>
-    <button routerLink="/user">My Library</button>
-    <button>Borrowed Books</button>
-
-    
-    
-
-
-</div>
-
+<p>dashboard-page works!</p>
