create add book component, create more details modal instead of more details component

--- a/library-app/src/app/features/dashboard/navbar/navbar.component.html
+++ b/library-app/src/app/features/dashboard/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <div class="dashboard">
-    <button [routerLink]="['/friend']" routerLinkActive="router-link-active" >Friend Library</button>
+    <button routerLink="/friend">Friend Library</button>
     <button routerLink="/user">My Library</button>
     <button routerLink="/borrowed">Borrowed Books</button>
+    <button routerLink="/add">Add Book</button>
 </div>
 
