--- a/library-app/src/styles.css
+++ b/library-app/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.title {
+    font-family: 'Poppins', sans-serif;
+}
+
+.author {
+    font-family: 'Poppins', sans-serif;
+}
