--- a/library-app/src/app/features/dashboard/header/header.component.css
+++ b/library-app/src/app/features/dashboard/header/header.component.css
@@ -1,39 +1,38 @@
 header {
-    background: linear-gradient(to right, #fceefc, #e0f7fa);
-    padding: 3rem 1.5rem;
-    text-align: center;
-    border-radius: 0 0 2rem 2rem;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
-    font-family: 'Poppins', sans-serif;
-    position: relative;
-  }
-  
+  background: linear-gradient(to right, #fceefc, #e0f7fa);
+  padding: 3rem 1.5rem;
+  text-align: center;
+  border-radius: 0 0 2rem 2rem;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+  font-family: "Poppins", sans-serif;
+  position: relative;
+}
+
+header h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  color: #4a148c;
+  font-weight: 700;
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
+}
+
+header h2 {
+  font-size: 1.2rem;
+  max-width: 800px;
+  margin: 0 auto;
+  color: #5e548e;
+  font-weight: 400;
+  font-style: italic;
+  line-height: 1.6;
+}
+
+@media (max-width: 600px) {
   header h1 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    color: #4a148c;
-    font-weight: 700;
-    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
+    font-size: 2.2rem;
   }
-  
+
   header h2 {
-    font-size: 1.2rem;
-    max-width: 800px;
-    margin: 0 auto;
-    color: #5e548e;
-    font-weight: 400;
-    font-style: italic;
-    line-height: 1.6;
+    font-size: 1rem;
+    padding: 0 1rem;
   }
-  
-  @media (max-width: 600px) {
-    header h1 {
-      font-size: 2.2rem;
-    }
-  
-    header h2 {
-      font-size: 1rem;
-      padding: 0 1rem;
-    }
-  }
-  
+}
