--- a/library-app/src/app/features/pages/borrowed-books/borrowed-books.component.html
+++ b/library-app/src/app/features/pages/borrowed-books/borrowed-books.component.html
@@ -1,27 +1,24 @@
 <div class="book-container">
-    @for (b of borrowedBooks; track b.isbn) {
-        <div class="book-card">
-            <div><img [src]="getImagePath(b)" class="image"/></div>
-            <div class="book-info">
-                <p class="title">{{ b.title }}</p> 
-                <p class="author"> by {{ b.author }}</p>
-                <button class="more-details" (click)="showModal = true">More Details</button>
-                <button class="return" (click)="returnBookHandler(b)">Return</button>
-            </div>
-        </div>
-    } @empty {
-        <p class="backup-message">No books added yet!</p>
-    }
+  @for (b of borrowedBooks; track b.isbn) {
+  <div class="book-card">
+    <div><img [src]="getImagePath(b)" class="image" /></div>
+    <div class="book-info">
+      <p class="title">{{ b.title }}</p>
+      <p class="author">by {{ b.author }}</p>
+      <button class="more-details" (click)="showModal(b)">More Details</button>
+      <button class="return" (click)="returnBookHandler(b)">Return</button>
+    </div>
+  </div>
+  } @empty {
+  <p class="backup-message">No books added yet!</p>
+  }
 </div>
+@if (selectedBook) {
 <div class="modal-backdrop">
-    @if (showModal) {
-        @for (b of borrowedBooks; track b.isbn) {
-        <div class="modal">
-          <h2>{{ b.title }} by {{ b.author }}</h2>
-          <p>{{ b.description }}</p>
-          <button (click)="showModal = false">Close</button>
-        </div>
-    }}
+  <div class="modal">
+    <h2>{{ selectedBook.title }} by {{ selectedBook.author }}</h2>
+    <p>{{ selectedBook.description }}</p>
+    <button (click)="selectedBook = null">Close</button>
+  </div>
 </div>
-
-
+}
