--- a/library-app/src/app/features/pages/friend-library/friend-library.component.html
+++ b/library-app/src/app/features/pages/friend-library/friend-library.component.html
@@ -7,7 +7,7 @@
       <p class="title">{{ b.title }}</p>
       <p class="author">by {{ b.author }}</p>
       <button class="more-details" (click)="showModal(b)">More Details</button>
-      <button class="rent" (click)="rentBookHandler(b)">Borrow</button>
+      <button class="rent" (click)="borrowBookHandler(b)">Borrow</button>
     </div>
   </div>
   } @empty {
