--- a/library-app/src/app/features/pages/borrowed-books/borrowed-books.component.css
+++ b/library-app/src/app/features/pages/borrowed-books/borrowed-books.component.css
@@ -1,12 +1,12 @@
-.book-container {
+/* .book-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 1.5rem;
   padding: 2rem;
   background: #f9f9fb;
-}
+} */
 
-.book-card {
+/* .book-card {
   background: #fff;
   border-radius: 1rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -20,9 +20,9 @@
 .book-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-}
+} */
 
-.image {
+/* .image {
   width: 100%;
   height: 350px;
   object-fit: cover;
@@ -45,7 +45,7 @@
   font-size: 0.95rem;
   color: #777;
   margin-bottom: 1rem;
-}
+} */
 
 button {
   border: none;
