--- a/library-app/src/app/features/pages/user-library/user-library.component.css
+++ b/library-app/src/app/features/pages/user-library/user-library.component.css
@@ -1,12 +1,12 @@
-.book-container {
+/* .book-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 1.5rem;
   padding: 2rem;
   background: #f9f9fb;
-}
+} */
 
-.book-card {
+/* .book-card {
   background: #fff;
   border-radius: 1rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -20,9 +20,9 @@
 .book-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-}
+} */
 
-.image {
+/* .image {
   width: 100%;
   height: 350px;
   object-fit: cover;
@@ -45,7 +45,7 @@
   font-size: 0.95rem;
   color: #777;
   margin-bottom: 1rem;
-}
+} */
 
 button {
   border: none;
@@ -197,7 +197,7 @@ button {
   }
 }
 
-.search-wrapper {
+/* .search-wrapper {
     max-width: 500px;
     margin: 2rem auto 2rem auto;
     padding: 0 1rem;
@@ -218,4 +218,4 @@ button {
     outline: none;
     border-color: #93c5fd;
     box-shadow: 0 0 0 3px rgba(147, 197, 253, 0.3);
-  }
+  } */
