--- a/library-app/src/app/features/dashboard/navbar/navbar.component.css
+++ b/library-app/src/app/features/dashboard/navbar/navbar.component.css
@@ -27,5 +27,5 @@
 
 .dashboard button:focus {
   outline: none;
-  box-shadow: 0 0 0 3px rgba(252, 213, 206, 0.6);
+  box-shadow: 0 0 0 3px #fbb1a8;
 }
